src/styles/override.css
@import url(markdown.css);

@supports (padding-top: env(safe-area-inset-top)) {
	:root {
		--device-inset-top: env(safe-area-inset-top, 0px);
		--device-inset-left: env(safe-area-inset-left, 0px);
		--device-inset-right: env(safe-area-inset-right, 0px);
		--device-inset-bottom: env(safe-area-inset-bottom, 0px);
	}
}

html {
	--ion-safe-area-top: var(--device-inset-top, 0px);
	--ion-safe-area-left: var(--device-inset-left, 0px);
	--ion-safe-area-right: var(--device-inset-right, 0px);
	--ion-safe-area-bottom: var(--device-inset-bottom, 0px);

	--ampersand-header-font-name: "Urbanist";
	--ampersand-header-font-style: normal;
	--ampersand-header-font-weight: 600;
	--ampersand-header-font-weight-medium: 500;
	--ampersand-header-font-features: normal;
	--ampersand-header-font-variation: normal;

	--ampersand-body-font-name: "Inter";
	--ampersand-body-font-style: normal;
	--ampersand-body-font-weight: 400;
	--ampersand-body-font-weight-medium: 500;
	--ampersand-body-font-features: normal;
	--ampersand-body-font-variation: normal;

	--ion-font-family: var(--ampersand-body-font-name), var(--ion-default-font);

	/* For some reason iPhones apply a padding underneath, so force height=viewport-height */
	height: 100vh;
}

html.fs-modern {
	--ampersand-header-font-name: "Outfit";
	--ampersand-header-font-weight: 600;
	--ampersand-body-font-name: "Montserrat";
}

html.fs-digital {
	--ampersand-header-font-name: "Oxanium";
	--ampersand-header-font-weight: 600;
	--ampersand-body-font-name: "Recursive";
	--ampersand-body-font-variation: "MONO" 1;
}

html.fs-round {
	--ampersand-header-font-name: "Recursive";
	--ampersand-header-font-weight: 700;
	--ampersand-header-font-variation: "CASL" 1, "CRSV" 1;
	--ampersand-body-font-name: "Fredoka";
}

html.fs-newspaper {
	--ampersand-header-font-name: "Merriweather";
	--ampersand-header-font-weight: 600;
	--ampersand-body-font-name: "Albert Sans";
}

html.fs-mystic {
	--ampersand-header-font-name: "Cinzel Decorative";
	--ampersand-header-font-weight: 700;
	--ampersand-body-font-name: "Amarna";
}

html.fs-classy {
	--ampersand-header-font-name: "Bodoni Moda";
	--ampersand-header-font-weight: 700;
	--ampersand-body-font-name: "Geom";
}

html.fs-boring {
	--ampersand-header-font-name: "Cinzel Decorative";
	--ampersand-header-font-weight: 700;
	--ampersand-body-font-name: "Jost";
}

/* High legibility fonts */
html.high-legibility {
	--ampersand-header-font-name: var(--ampersand-body-font-name);
	--ampersand-header-font-weight: 600;

	&.hl-atkinson {
		--ampersand-body-font-name: "Atkinson Hyperlegible";
	}

	&.hl-opendyslexic {
		--ampersand-body-font-name: "OpenDyslexic";
		--ampersand-header-font-weight: 700;
	}

	&.hl-lexend {
		--ampersand-body-font-name: "Lexend";
	}

	&.hl-comicrelief {
		--ampersand-body-font-name: "Comic Relief";
		--ampersand-header-font-weight: 700;
	}

	&.hl-system-font {
		--ampersand-body-font-name: system-ui, -apple-system, BlinkMacSystemFont;
	}
}

* {
	scrollbar-width: thin;
	scrollbar-color: var(--ion-color-primary) transparent;
}

/* Modifications to Ionic components that we made for our app specifically */

/* macOS transparency */
html:is(.sys-macos),
html:is(.sys-macos) body {
	background-color: transparent;
}

/* Tab bar scrolling */
ion-tab-bar {
	overflow-x: auto;
	justify-content: normal;
}

/* Tab bar desktop mode */
html:is(.plt-tablet, .plt-desktop) ion-tabs {
	flex-direction: row-reverse !important;
}

html:is(.plt-tablet, .plt-desktop) ion-tab-bar {
	flex-direction: column;
	padding-top: var(--ion-safe-area-top, 0px);
	padding-bottom: var(--ion-safe-area-bottom, 0px);
	height: calc(100% - var(--ion-safe-area-top, 0px) - var(--ion-safe-area-bottom, 0px));
	width: 80px;
	padding-left: var(--ion-safe-area-left, 0px);
	padding-right: 0;
	overflow-x: hidden;
	overflow-y: auto;

	&:dir(rtl) {
		padding-right: var(--ion-safe-area-right, 0px);
		padding-left: 0;
	}
}

html:is(.plt-tablet, .plt-desktop) ion-tab-button {
	flex: 0 0;
	min-height: 80px;

	&:first-child {
		margin-top: auto;
	}

	&:last-child {
		margin-bottom: auto;
	}
}

html:is(.plt-tablet, .plt-desktop) ion-tabs :not(ion-tab-bar) {
	--ion-safe-area-left: 0px;
}

/* macOS tab bar */
html:is(.sys-macos) ion-tab-bar {
	background: rgba(var(--md3-surface-container), 0.85);
}

html:is(.sys-macos) ion-tab-button {
	background-color: transparent;
}

/* Padding fixes for the bottom of lists when a FAB is there and when it isn't */
ion-tabs ion-content:has(> ion-fab.fab-vertical-bottom[slot="fixed"]:not(:empty)) {
	--padding-bottom: 88px;
}

ion-content:not(ion-tabs *),
html:is(.plt-tablet, .plt-desktop) ion-content {
	--padding-bottom: calc(var(--ion-safe-area-bottom, 0px) + 8px);

	&:has(> ion-fab.fab-vertical-bottom[slot="fixed"]:not(:empty)) {
		--padding-bottom: calc(var(--ion-safe-area-bottom, 0px) + 88px);
	}
}

/* Safe area for ion-datetime put directly inside ion-content */
ion-content > ion-datetime {
	padding-right: var(--ion-safe-area-right, 0px);
	padding-left: var(--ion-safe-area-left, 0px);
}

/* Make datetime actually take whichever width it wants */
ion-datetime {
	max-width: 100%;
}

/* Safe area for FABs */
ion-fab:not(html:not(.plt-tablet, .plt-desktop) ion-tabs *) {
	margin-bottom: var(--ion-safe-area-bottom, 0px);
}

/* Safe area for ion-toast */
ion-toast {
	--ion-safe-area-bottom: calc(var(--device-inset-bottom, 0px) + 80px);
}

/* Remove top padding on modals */
ion-modal.modal-sheet ion-header ion-toolbar:first-of-type {
	--ion-safe-area-top: 0px;
}

/* Safe area inheritance for modals, this should've been fixed by Ionic but we lack testing */
ion-modal.modal-sheet {
	--ion-safe-area-top: inherit;
	--ion-safe-area-left: inherit;
	--ion-safe-area-right: inherit;
	--ion-safe-area-bottom: inherit;
}

/* Our own ion-item-option styling */
ion-item-option {
	border-radius: 28px;
	width: 56px;
	height: 56px;
	margin: auto 8px;
}

ion-item-option:last-child {
	margin-right: 16px;
}

/* Ion Range being too tall when pin is active, and remove having label being weirdly transformed */
ion-range.range-label-placement-stacked::part(label) {
	transform: none;
	margin-top: 8px;
	margin-bottom: 8px;
	max-width: 100%;
	overflow-x: hidden;
	text-wrap: wrap;
}

ion-range.range-label-placement-stacked > [slot="label"] {
	overflow-x: hidden;
	text-wrap: wrap;
}

/* Prevent ion-label wrapping -- should we still keep this? */
ion-label.nowrap > *:not(div) {
	text-wrap: nowrap !important;
	text-overflow: ellipsis !important;
	overflow: hidden !important;
}

/* Remove double cancel on searchbar */
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
	display: none !important;
}

/* Utilities */
.centered-text {
	text-align: center;
	padding: 1em;
}

p {
	text-wrap: wrap;
}

